first lecture and assignment

--- a/index.qmd
+++ b/index.qmd
@@ -13,7 +13,7 @@ title-block-banner: true
 
 # **// About**
 
-This class will help students establish a core understanding of data visualization. We will consider how data type (including tabular, network, and spatial data) interacts with visualization task to guide design choices. Diverse types of visual encodings and how they relate to human perception will be presented, along with practical exercises using the R and Python programming languages. Upon completion of the course, students will understand **WHY** particular visualization approaches are effective for a given data set and **HOW** to implement those visualizations using the language of their choice. The course is designed to be "discipline agnostic" - each student is encouraged to use data sets that they deem important / interesting. The goal is to have students learn how to develop visualizations that are relevant to their own disciplinary interests.
+Students are taught writing and presentation skills to improve their communication of data-driven insights to specialist and lay audiences. The course emphasizes reproducible research practices, including literate programming (Quarto / Markdown) and version control (GitHub). Course content includes the conceptual foundations of communicating with data along with written and verbal assignments using data sets individualized to each student’s interest. The course is designed to be "discipline agnostic" - each student is encouraged to use their own data, or public data sets that they deem important / interesting. 
 
 ## Quick Links
 
