--- a/posts/L1-Intro/index.qmd
+++ b/posts/L1-Intro/index.qmd
@@ -7,12 +7,12 @@ format:
       buttons: false
     preview-links: auto
     css: styles.css
-    footer: <a href="https://canvas.uidaho.edu/courses/25613" target="_blank">CANVAS</a>...<a href="https://professorpolymorphic.github.io/BCB520/" target="_blank">HOME</a>
+    footer: <a href="https://professorpolymorphic.github.io/BCB521/" target="_blank">HOME</a>
     theme: [default, custom.scss]
 
 author: "Barrie Robison"
-date: "2024-01-10"
-categories: [Lecture, DataViz, Intro]
+date: "2024-08-27"
+categories: [Lecture, Intro]
 image: "braindata.png"
 ---
 
@@ -34,190 +34,60 @@ image: "braindata.png"
 
 ## WHO ARE YOU?
 
-"...The course is designed to be"discipline agnostic" - each student is encouraged to use data sets that they deem important / interesting. The goal is to have students learn how to develop visualizations that are relevant to their own disciplinary interests..."
+"...The course is designed to be "discipline agnostic" - each student is encouraged to use their own data, or public data sets that they deem important / interesting. ..."
 
 ### Briefly:
 
 -   Your name
 -   Your discipline
 -   Your degree progress
--   Your technical proficiency with data visualization
+-   Your technical proficiency 
 
 ## COURSE SUMMARY
 
 Students completing this course will be able to:
 
 ::: r-fit-text
-1.  Describe and manipulate tabular, network, and spatial data; transform these data into a form suitable for visualization.
-2.  Make effective data visualization design choices related to marks and channels, spatial arrangement, and components of color.
-3.  Design effective data visualizations for tabular, network, and spatial data with quantitative and categorical attributes.
-4.  Implement their data visualization designs using existing tools in R (or other toolkits preferred by the student).
-5.  Explain whether a visual encoding is perceptually appropriate for a specific combination of task and data.
-6.  Demonstrate their skills with at least two novel visualizations suitable suitable for inclusion in an online Data Science Portfolio.
+1.  Identify, understand, and describe the critical characteristics, needs, and expectations of the various audiences with whom they will communicate.
 
-The course materials are located on [Canvas](https://canvas.uidaho.edu/courses/17806) and the [course website](https://github.com/ProfessorPolymorphic).
+2. Develop and apply effective writing and presentation skills to communicate data-driven insights clearly and impactfully to both specialist and general audiences.
+
+3. Implement reproducible research practices using literate programming (Quarto/Markdown) and version control (GitHub) to enhance the transparency and reproducibility of their work.
+
+4. Create compelling narratives around data that are tailored to specific disciplines while remaining accessible to interdisciplinary audiences.
+
+5. Critically evaluate and apply appropriate data visualization techniques to support written and verbal communications, enhancing the accessibility of complex data analysis results.
+
 :::
 
-## VISUALIZATION
+## CENTRAL DOGMA
 
-Computers provide [visual]{.red} representations of datasets designed to help people carry out tasks more effectively.
+Who is the AUDIENCE and what is the GOAL?
 
-### [Tamara Munzner]{.absolute bottom="160" left="10"}
+## THE AUDIENCE
 
-[Department of Computer Science]{.absolute bottom="120" left="10"}
+What kind of audiences?  Can they be categorized or grouped?
 
-[[InfoVis Group](https://www.cs.ubc.ca/group/infovis/)]{.absolute bottom="80" left="10"}
+## THE GOAL
 
-[University of British Columbia]{.absolute bottom="40" left="10"}
+What kind of goals?  Can they be categorized or grouped?
 
-![](VADcover.jpg){.absolute bottom="70" right="10" width="300"} ![](TamaraMunzner.jpg){.absolute top="240" left="10" width="330"}
 
-## THE HUMAN
+## THE STRATEGY
 
-**Why have a human in the loop?**
+How can the goal be achieved with this audience?  Is this concept too abstract to discuss?
 
-Computer-based visualization systems provide visual representations of datasets designed to help [people]{.red} carry out [tasks]{.red} more effectively.
+## THE MEDIUM
 
--   We don't need visualization when a **trusted** fully automatic solution exists.
+What are the possible communication channels with our audience?  How do these channels align with our modes of communication (showing, speaking, writing)?
 
--   Visualization is suitable when there is a need to [augment human capabilities]{.red} rather than replace people with computational decision-making methods.
 
-## WHEN TO VISUALIZE
 
-**Visualization is useful when:**
+## TECHNICAL COMPONENTS
 
-::: r-fit-text
--   The analysis problem is ill-specified and we don't know exactly what questions to ask in advance.
--   We are interested in long-term use for end users (ex: exploratory analysis of scientific data).
--   We are presenting known results (ex: DATA JOURNALISM - [New York Times Upshot](https://www.nytimes.com/section/upshot)).
--   We need a stepping stone to assess requirements before developing models.
--   Developers of an automatic solution want to refine & determine parameters.
--   We need to help end users of automatic solutions verify and build trust.
-:::
+[Literate Programming](../A1-Lit-Prog/index.qmd)
 
-## THE REPRESENTATION
+Version Control
 
-Computer-based visualization systems provide visual representations of datasets designed to help people carry out tasks more effectively.
-
-EXTERNAL REPRESENTATIONS: Replace [cognition]{.red} with [perception]{.red}.
-
-## WHY DEPEND ON VISION?
-
-Computer-based visualization systems provide [visual representations]{.red} of datasets designed to help people carry out tasks more effectively.
-
-::: r-fit-text
--   The human visual system is a high-bandwidth channel to the brain.
--   Overview is possible due to background processing, providing the subjective experience of seeing everything simultaneously.
--   Significant processing occurs in parallel and pre-attentively.
--   **What about sound?** lower bandwidth and different semantics, overview not supported, subjective experience of sequential stream.
--   **What about touch/haptics?** impoverished record/replay capacity, only very low-bandwidth communication thus far.
--   **What about taste, smell?** no viable record/replay devices.
-:::
-
-## WHY REPRESENT (ALL THE) DATA?
-
-Computer-based visualization systems provide visual representations of [datasets]{.red} designed to help people carry out tasks more effectively.
-
-::: r-fit-text
--   summaries lose information
--   details matter
--   confirm expected and find unexpected patterns
--   assess validity of statistical model
--   ANSCOMBE'S QUARTET is a fun example that we shall use to illustrate these points!
-:::
-
-## ANSCOMBE'S QUARTET
-
-::: columns
-::: {.column width="50%" style="font-size: 25px"}
-```{r}
-#| echo: true
-#| code-fold: true
-#| fontsize: 2
-library(ggplot2)
-library(grid)
-library(gridExtra)
-library(datasets)
-library(tidyverse)
-library(dplyr)
-datasets::anscombe
-```
-:::
-
-::: {.column width="50%" style="font-size: 25px"}
-#### Anscombe's Quartet
-
-The four x-y pairs have identical summary statistics.
-
-```{r}
-#| echo: true
-#| code-fold: true
-
-tidy_anscombe <- anscombe %>%
- pivot_longer(cols = everything(),
-              names_to = c(".value", "set"),
-              names_pattern = "(.)(.)")
-tidy_anscombe_summary <- tidy_anscombe %>%
-  group_by(set) %>%
-  summarise(across(.cols = everything(),
-                   .fns = lst(min,max,median,mean,sd,var),
-                   .names = "{col}_{fn}"))
-#> `summarise()` ungrouping output (override with `.groups` argument)
-
-vars<-c("set", "x_mean", "x_var",  "y_mean", "y_var")
-thing<- as.data.frame(tidy_anscombe_summary[vars])
-knitr::kable(thing)
-```
-:::
-:::
-
-## VIZ MATTERS
-
-```{r}
-#| echo: true
-#| code-fold: true
-#| fontsize: 2
-ggplot(tidy_anscombe,
-       aes(x = x,
-           y = y)) +
-  geom_point() +
-  geom_point(data = tidy_anscombe_summary, aes(x=x_mean, y = y_mean, color = "red", size = 5),
-             show.legend = FALSE)+
-  facet_wrap(~set) +
-  geom_smooth(method = "lm", se = FALSE)
-```
-
-::: footer
-Learn more: [TIDY ANSCOMBE](https://www.njtierney.com/post/2020/06/01/tidy-anscombe/)
-:::
-
-## RESOURCE LIMITATIONS
-
-Visualization designers must take into account three very different kinds of resource limitations:
-
--   Limitations of computers.
--   Limitations of humans.
--   Limitations of displays.
-
-## COMPUTATIONAL LIMITS
-
-CPU time
-
-System Memory
-
-## DISPLAY LIMITS
-
-Pixels are precious and are the most constrained resource.
-
--   [Information Density]{.red}: ratio of space used to encode information vs unused whitespace.
--   There is a tradeoff between clutter and wasting space.
--   Designer must find the sweet spot between dense and sparse.
-
-## HUMAN LIMITS
-
--   Time
--   Memory
--   Attention
-
-![](braindata.png){.absolute bottom="100" right="10" height="500"}
+Artificial Intelligence
 
