--- a/posts/L1-Intro/index.qmd
+++ b/posts/L1-Intro/index.qmd
@@ -4,7 +4,7 @@ format:
   revealjs: 
     slide-number: true
     chalkboard: 
-      buttons: false
+      buttons: true
     preview-links: auto
     css: styles.css
     footer: <a href="https://professorpolymorphic.github.io/BCB521/" target="_blank">HOME</a>
